feat(ngrrd): rebalance com ingestão contínua (8.5.0) (#172)
* feat(ngrrd): rebalance with continuous ingestion (8.5.0)

* ci: isolate constrained scheduler ingestion regression

* fix(ngrid): preserve live socket when resolving seed identity

* test(ngrid): await both disconnects before exercising dead-peer relay

* fix(ngrid): fence connection admission during transport shutdown

---------

Co-authored-by: Lucas Nishimura <lucasnishimura@gmail.com>